[gd_scene load_steps=2 format=3 uid="uid://bqy7w3x8kv3co"]

[ext_resource type="Script" path="res://UI.gd" id="1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Stats" type="HBoxContainer" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 800.0
offset_bottom = 80.0
theme_override_constants/separation = 30

[node name="LivesLabel" type="Label" parent="HUD/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 1, 0.8)
theme_override_font_sizes/font_size = 24
text = "Lives: 3"

[node name="GemsLabel" type="Label" parent="HUD/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 1, 0.8)
theme_override_font_sizes/font_size = 24
text = "Gems: 0/3"

[node name="SpeedLabel" type="Label" parent="HUD/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 1, 0.8)
theme_override_font_sizes/font_size = 24
text = "Speed: 0 km/h"

[node name="DistanceLabel" type="Label" parent="HUD/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 1, 0.8)
theme_override_font_sizes/font_size = 24
text = "Distance: 0 m"

[node name="Notification" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 0.8)
theme_override_font_sizes/font_size = 32
text = "Notification"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartScreen" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="StartScreen/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="StartScreen/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "Slope Runner"
horizontal_alignment = 1

[node name="Description" type="Label" parent="StartScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Navigate down the dark slope and collect 3 gems to find the exit!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Instructions" type="VBoxContainer" parent="StartScreen/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="StartScreen/Panel/VBox/Instructions"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Controls:"
horizontal_alignment = 1

[node name="Controls1" type="Label" parent="StartScreen/Panel/VBox/Instructions"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "← → or A/D keys to move left/right"
horizontal_alignment = 1

[node name="Controls2" type="Label" parent="StartScreen/Panel/VBox/Instructions"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "P or ESC to pause"
horizontal_alignment = 1

[node name="Controls3" type="Label" parent="StartScreen/Panel/VBox/Instructions"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Avoid trees and mounds"
horizontal_alignment = 1

[node name="Controls4" type="Label" parent="StartScreen/Panel/VBox/Instructions"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Your headlamp lights the way"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="StartScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start Game"

[node name="PauseScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PauseScreen/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PauseScreen/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1

[node name="Info" type="Label" parent="PauseScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Press P or ESC to resume"
horizontal_alignment = 1

[node name="Stats" type="VBoxContainer" parent="PauseScreen/Panel/VBox"]
layout_mode = 2

[node name="Distance" type="HBoxContainer" parent="PauseScreen/Panel/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/Panel/VBox/Stats/Distance"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Distance:"

[node name="DistanceValue" type="Label" parent="PauseScreen/Panel/VBox/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0 m"
horizontal_alignment = 1

[node name="Gems" type="HBoxContainer" parent="PauseScreen/Panel/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/Panel/VBox/Stats/Gems"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Gems:"

[node name="GemsValue" type="Label" parent="PauseScreen/Panel/VBox/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0/3"
horizontal_alignment = 1

[node name="Lives" type="HBoxContainer" parent="PauseScreen/Panel/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/Panel/VBox/Stats/Lives"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Lives:"

[node name="LivesValue" type="Label" parent="PauseScreen/Panel/VBox/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "3"
horizontal_alignment = 1

[node name="GameOverScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="GameOverScreen/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Game Over"
horizontal_alignment = 1

[node name="Info" type="Label" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "You crashed!"
horizontal_alignment = 1

[node name="Stats" type="VBoxContainer" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2

[node name="Distance" type="HBoxContainer" parent="GameOverScreen/Panel/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOverScreen/Panel/VBox/Stats/Distance"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Distance:"

[node name="DistanceValue" type="Label" parent="GameOverScreen/Panel/VBox/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0 m"
horizontal_alignment = 1

[node name="Gems" type="HBoxContainer" parent="GameOverScreen/Panel/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOverScreen/Panel/VBox/Stats/Gems"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Gems Collected:"

[node name="GemsValue" type="Label" parent="GameOverScreen/Panel/VBox/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0/3"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Try Again"

[node name="WinScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="WinScreen/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="WinScreen/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Victory!"
horizontal_alignment = 1

[node name="Info" type="Label" parent="WinScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "You collected all 3 gems and found the exit!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Stats" type="VBoxContainer" parent="WinScreen/Panel/VBox"]
layout_mode = 2

[node name="Distance" type="HBoxContainer" parent="WinScreen/Panel/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="WinScreen/Panel/VBox/Stats/Distance"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Final Distance:"

[node name="DistanceValue" type="Label" parent="WinScreen/Panel/VBox/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0 m"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="WinScreen/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[connection signal="pressed" from="StartScreen/Panel/VBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GameOverScreen/Panel/VBox/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="WinScreen/Panel/VBox/RestartButton" to="." method="_on_restart_button_pressed"]
